--- a/ClientApp/src/index.html
+++ b/ClientApp/src/index.html
@@ -6,8 +6,8 @@
   <title>HospitalManagement</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="assets/icono.ico">
 
-  <link rel="icon" type="image/x-icon" href="../src/assets/icono.ico">
 
 </head>
 
